Closed Bug 147923 Opened 22 years ago Closed 22 years ago

Favorites toolbar draws on top of web page when window is made small

Categories

(Camino Graveyard :: Page Layout, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: chrispetersen, Assigned: mikepinkerton)

References

()

Details

Attachments

(1 file)

When you have many bookmarks in the favorites toolbar and you make
the window small the bookmarks shift down and cover the web page.
This happens on virtually all small windows.  The severity of the coverage
varies with each time the window is made small.  Making the window
large again does not fix the problem.  You must close the window and
open a new one.
Very reproducable in 0.2.8
->pinkerton
Assignee: saari → pinkerton
i see nothing wrong here. the toolbar wraps. should it not wrap? the content
doesn't get covered at all.
After resizing the window multiple times,I see the problem shown in the attachment.
After resizing multiple times, the toolbar bookmarks will start to "float" over
top of page. See second attachment.
petersen, is this webpage-dependent? i can't dupe it with www.mozilla.org.
No, doesn't seem to be web page specific.
Additional steps to reproduce:

1) Launch Chimera
2) Drag numerous bookmarks to personal toolbar so that it wraps down to the next
line.
3) Resize the browser window to the smallest possible size. This causes the 
toolbar bookmarks to wrap in window.
4) Now, resize window back to original size.
5) Bookmarks float off the toolbar and are placed over page.

Occurs on two different G4's (Dual 800 and Single 933), OS X 10.1.4
The bug is only reproducable when you make the window small quickly.  If 
you make the window small slowly the bug does not appear.  Grab the 
resize box and make the window small as fast as you can.
ah-ha! yes, i see this now. the trick is going _FAST_. smells like a cocoa bug
to me, i'm not sure if we even have any code that does this ourselves. i'll
check the  autosizing, but...
Status: NEW → ASSIGNED
got it. much better now. fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Marking verified in 2002-06-04-05 nightly trunk build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: