Fixup button reflow logic to avoid toolbar drawing over content area. bug 147923